--- a/src/main/resources/com/oppai/opelax/Scene2.fxml
+++ b/src/main/resources/com/oppai/opelax/Scene2.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.oppai.opelax.Scene2"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oppai.opelax.Scene2">
+   <children>
+      <Label layoutX="213.0" layoutY="83.0" prefHeight="35.0" prefWidth="221.0" text="Hello">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
